--- a/static/css/loading.css
+++ b/static/css/loading.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     color: var(--color-fgcolor-neutral-secondary, #56565C);
+    font-size: 100%;
 }
 
 [data-loading='true'] .page-loader {
