--- a/static/css/loading.css
+++ b/static/css/loading.css
@@ -5,6 +5,7 @@ body {
 }
 
 [data-loading='true'] .page-loader {
+    pointer-events: initial;
     visibility: visible;
     opacity: 1;
 }
@@ -21,6 +22,7 @@ body {
 }
 
 .page-loader {
+    pointer-events: none;
     visibility: hidden;
     opacity: 0;
     z-index: 100000;
